tests/baselines/reference/protectedClassPropertyAccessibleWithinSubclass(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
protectedClassPropertyAccessibleWithinSubclass.ts(4,15): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== protectedClassPropertyAccessibleWithinSubclass.ts (1 errors) ====
    // no errors
    
    class B {
        protected x: string;
                  ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        protected static x: string;
    }
    
    class C extends B {
        protected get y() { return this.x; }
        protected set y(x) { this.y = this.x; }
        protected foo() { return this.x; }
        protected bar() { return this.foo(); }
    
        protected static get y() { return this.x; }
        protected static set y(x) { this.y = this.x; }
        protected static foo() { return this.x; }
        protected static bar() { this.foo(); }
    }
    